--- a/app/templates/accounts.hbs
+++ b/app/templates/accounts.hbs
@@ -21,17 +21,17 @@
       {{#link-to "account.transactions" account tagName="tr" class="link"}}
         <td class="account-info">
           <div class="label">
-            {{unbound account.label}}
+            {{account.label}}
           </div>
           <div class="details">
             <span class="number">
-              {{unbound account.number}}
+              {{account.number}}
             </span>
             <span class="type">
-              {{unbound account.description}}
+              {{account.description}}
             </span>
             <span class="currency">
-              {{unbound account.currency}}
+              {{account.currency}}
             </span>
           </div>
         </td>
