Adds empty state to account/transactions.

--- a/app/templates/account/transactions.hbs
+++ b/app/templates/account/transactions.hbs
@@ -81,6 +81,12 @@
           {{/if}}
         </td>
       </tr>
+    {{else}}
+      <tr class="empty">
+        <td colspan="4">
+          <em>This account has no posted transactions to display.</em>
+        </td>
+      </tr>
     {{/each}}
   </tbody>
 </table>
