WIP: Styling forms.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -8,6 +8,7 @@
 @import "components/fmt-dollars"
 @import "components/ui-overlay"
 @import "components/ui-form"
+@import "components/ui-dollar-input"
 
 @import "templates/loading"
 @import "templates/application"
