--- a/app/templates/components/ui-form-field.hbs
+++ b/app/templates/components/ui-form-field.hbs
@@ -5,7 +5,9 @@
     {{label}}
   </label>
 
-  {{partial controlPartialPath}}
+  <span class="ui-form-control-container">
+    {{partial controlPartialPath}}
+  </span>
 {{/if}}
 
 {{#if isInvalid}}
