--- a/app/templates/transfers/confirm.hbs
+++ b/app/templates/transfers/confirm.hbs
@@ -23,7 +23,7 @@
     </fieldset>
   {{/if}}
 
-  <fieldset>
+  <fieldset class="actions">
     <button type="submit">Confirm &amp; Transfer Funds</button>
     <span>or</span>
     <button {{action "cancel"}}>Cancel</button>
