--- a/app/templates/transfers/new.hbs
+++ b/app/templates/transfers/new.hbs
@@ -23,7 +23,7 @@
       label="Amount"}}
   </fieldset>
 
-  <fieldset>
+  <fieldset class="actions">
     <button type="submit">Transfer Funds</button>
     <span class="or">or</span>
     {{#link-to "transfers"}}Cancel{{/link-to}}
