--- a/app/styles/components/ui-form.sass
+++ b/app/styles/components/ui-form.sass
@@ -1,5 +1,49 @@
 .ui-form
   position: relative
+  background: white
+
+  label, input, textarea, select
+    font-size: 18px
+
+  label
+    font-weight: 700
+
+  fieldset
+    border: none
+    padding: $gutter 0
+    margin: 0
+
+  fieldset.actions
+    padding: 0
+    min-height: $header-height
+    background: #ddd
 
 .ui-form-field
   position: relative
+  height: $header-height
+  line-height: $header-height
+
+  label
+    position: absolute
+    display: block
+    width: 25%
+    left: 0
+    text-align: right
+    line-height: $header-height
+
+  .ui-form-control
+    margin-left: $gutter
+    width: 40%
+
+  .ui-form-control-container
+    position: absolute
+    display: block
+    width: 75%
+    right: 0
+    line-height: $header-height
+
+  .ui-form-error
+    position: relative
+    background: red
+    color: white
+    line-height: 1.35em
