Forms are styled.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -2,6 +2,7 @@
 
 @import "support/fonts"
 @import "support/data"
+@import "support/button"
 @import "support/keyframes"
 @import "support/content-table"
 
