--- a/app/templates/transfers/new.hbs
+++ b/app/templates/transfers/new.hbs
@@ -26,6 +26,6 @@
   <fieldset class="actions">
     <button type="submit">Transfer Funds</button>
     <span class="or">or</span>
-    {{#link-to "transfers"}}Cancel{{/link-to}}
+    {{#link-to "transfers" class="cancel"}}Cancel{{/link-to}}
   </fieldset>
 {{/ui-form}}
