--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -5,6 +5,7 @@
 @import "support/button"
 @import "support/keyframes"
 @import "support/content-table"
+@import "support/document"
 
 @import "components/fmt-dollars"
 @import "components/ui-overlay"
