--- a/app/templates/model-not-found.hbs
+++ b/app/templates/model-not-found.hbs
@@ -1,5 +1,10 @@
-<h1>404</h1>
+<header>
+  <h1>Not Found</h1>
+</header>
 
-<p>
-  The Model your looking for has not been found
-</p>
+<div class="document">
+  <p>
+    We&rsquo;re sorry, the page you were looking for does not exist or was
+    removed.
+  </p>
+</div>
