Styled transaction show.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -10,6 +10,7 @@
 @import "components/fmt-dollars"
 @import "components/ui-overlay"
 @import "components/ui-form"
+@import "components/ui-form-field"
 @import "components/ui-dollar-input"
 
 @import "templates/loading"
