--- a/app/styles/templates/account.sass
+++ b/app/styles/templates/account.sass
@@ -58,6 +58,9 @@ table.account-transactions
     .plan .label
       display: none
 
+    .currency .label
+      display: none
+
     > span
       display: inline-block
 
