--- a/app/templates/account/transactions.hbs
+++ b/app/templates/account/transactions.hbs
@@ -18,7 +18,7 @@
 
     {{#if account.interestRate}}
       <span class="interest-rate">
-        <span class="label">Rate:</span>
+        <span class="label">@</span>
         <span>{{account.interestRate}}%</span>
       </span>
     {{/if}}
