--- a/app/templates/accounts.hbs
+++ b/app/templates/accounts.hbs
@@ -1,5 +1,5 @@
 <header>
-  <h1>Banking Accounts</h1>
+  <h1>Bank Accounts</h1>
 </header>
 
 <table class="content-table accounts">
@@ -8,14 +8,17 @@
       <th class="account-info">
         Account
       </th>
+
       <th class="account-updated">
         Last Active
       </th>
+
       <th class="account-balance">
         Balance
       </th>
     </tr>
   </thead>
+
   <tbody>
     {{#each account in sorted}}
       {{#link-to "account.transactions" account tagName="tr" class="link"}}
@@ -23,21 +26,26 @@
           <div class="label">
             {{account.label}}
           </div>
+
           <div class="details">
             <span class="number">
               {{account.number}}
             </span>
+
             <span class="type">
               {{account.description}}
             </span>
+
             <span class="currency">
               {{account.currency}}
             </span>
           </div>
         </td>
+
         <td class="account-updated">
           {{rel-time time=account.updatedAt}}
         </td>
+
         <td class="account-balance">
           {{fmt-dollars cents=account.balanceInCents}}
         </td>
