--- a/app/templates/transfers/confirm.hbs
+++ b/app/templates/transfers/confirm.hbs
@@ -41,7 +41,7 @@
 
   <fieldset class="actions">
     <button type="submit">Confirm &amp; Transfer Funds</button>
-    <span>or</span>
+    <span class="or">or</span>
     <button class="cancel" {{action "cancel"}}>Cancel</button>
   </fieldset>
 {{/ui-form}}
