--- a/app/styles/templates/transfers.sass
+++ b/app/styles/templates/transfers.sass
@@ -6,7 +6,12 @@ table.transfers
     text-align: center
 
 table.transfer
-  hi: ok
+  .transfer-id td
+    font-family: "Monaco", "Consolas", "Source Sans Pro" "monospace"
+
+  .transfer-iet-message td
+    font-style: italic
+    color: #999
 
 .transfer-state .state
   background: #aaa
